--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -16,5 +16,24 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+    
+	<style name="TextAnswer">        
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <!-- <item name="android:layout_marginTop">150dip</item> -->
+        <item name="android:gravity">top|center_horizontal</item>      
+        <item name="android:textSize"> 18sp</item>
+      <!--   <item name="android:textStyle">bold</item> -->
+        <item name="android:textColor">@color/text_answer</item>
+    </style>
+    
+	<style name="ButtonMenu">   
+        <item name="android:layout_width">fill_parent</item>    
+        <item name="android:layout_height">35dip</item>  
+        <item name="android:layout_marginTop">10dip</item>   
+        <item name="android:layout_marginLeft">20dip</item>    
+        <item name="android:layout_marginRight">20dip</item>  
+        <item name="android:textSize">15sp</item>    
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
